Definig the rewards list

--- a/Deep Q Learning/Space Invaders/DQN Atari Space Invaders.ipynb
+++ b/Deep Q Learning/Space Invaders/DQN Atari Space Invaders.ipynb
@@ -693,7 +693,7 @@
    "source": [
     "# Saver will help us to save our model\n",
     "saver = tf.train.Saver()\n",
-    "\n",
+    "rewards_list = [] \n",
     "if training == True:\n",
     "    with tf.Session() as sess:\n",
     "        # Initialize the variables\n",
